試験問題の間違いを修正

--- a/src/lib/shiken/shiken.tex
+++ b/src/lib/shiken/shiken.tex
@@ -19,7 +19,7 @@
 
 \section{税制}
 100万円, 103万円, 106万円, 130万円どの壁にしても、
-そもそも壁を作らずに滑らかに補完しようという発想に至らない役人は
+そもそも壁を作らずに滑らかに補間しようという発想に至らない役人は
 $y=ax$すら活用できないホイ卒である。
 \begin{enumerate}
     \item はい
@@ -38,8 +38,8 @@ $y=ax$すら活用できないホイ卒である。
 \end{enumerate}
 
 \section{線型代数}
-線型作用素$T:D(T)\rightarrow R(T)$の単射性と$\mbox{Ker}T=0$
-が同値であることを示せ(ただしこの0は始域の零ベクトルのみを含む集合を意味する.).
+線型作用素$T:D(T)\rightarrow R(T)$の単射性と$\mbox{Ker}T=\{0\}$
+が同値であることを示せ(ただしこの\{0\}は始域の零ベクトルのみを含む集合を意味する.).
 
 \section{アルゴリズム}
 同じ順序集合の元からなる2つのソート済みリスト$A,B$ 及び$A,B$の要素数$N,M$が与えられる。
